dynamically_typed_tests/invalid/variables/undeclaredVarAccess.wacc
# access attempt on undeclared variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 10 ;
  x = x + y
end
